# чистка, комментарии, исправление ошибок

--- a/Homework_10/Homework_10.csproj
+++ b/Homework_10/Homework_10.csproj
@@ -7,10 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="1.jpg" />
     <None Remove="1613048199_18-p-oranzhevii-fon-poligonalnii-18.jpg" />
-    <None Remove="bot.ico" />
-    <None Remove="bot_explorer.ico" />
+    <None Remove="bot_explorer.psd" />
     <None Remove="i.jpg" />
     <None Remove="img_res\exit_btn.png" />
     <None Remove="img_res\explorer_btn.png" />
@@ -32,9 +30,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="1.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
     <Resource Include="bot.ico" />
     <Resource Include="bot_explorer.ico" />
     <Resource Include="img_res\exit_btn.png" />
@@ -45,6 +40,10 @@
     <Resource Include="img_res\refresh_btn.png" />
     <Resource Include="img_res\send_btn.png" />
     <Resource Include="img_res\send_transp_btn.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="mainLogik\img_res\" />
   </ItemGroup>
 
 </Project>
