--- a/Homework_11_wpfUI/Homework_11_wpfUI.csproj
+++ b/Homework_11_wpfUI/Homework_11_wpfUI.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
+    <PackageReference Include="MvvmLight" Version="5.4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
