--- a/Homework_13_bank_system/Homework_13_bank_system.csproj
+++ b/Homework_13_bank_system/Homework_13_bank_system.csproj
@@ -25,4 +25,8 @@
     <Resource Include="minBtn.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MVVM\" />
+  </ItemGroup>
+
 </Project>
