# очищен code behind

--- a/Homework_13_bank_system/Homework_13_bank_system.csproj
+++ b/Homework_13_bank_system/Homework_13_bank_system.csproj
@@ -26,4 +26,8 @@
     <Resource Include="minBtn.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\personsBin\" />
+  </ItemGroup>
+
 </Project>
