--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 /masterCreatorTesting
 /testing
 /HW13_Bank_System_Prototype
+/Homework_13_bank_system/Homework_13_bank_system.cspro
+/Homework_13_bank_system/Homework_13_bank_system.rar
